welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:24: error: ';' expected but ',' found.
    case 2 => setCouleurBrosse(Color.blue), avance(2)
                                          ^